[package]
name = "payrange"
version = "0.1.0"
authors = ["Alex Nichol <unixpickle@gmail.com>"]

[lib]
name = "payrange"
path = "src/mod.rs"

[[bin]]
name = "payrange-auth"
path = "src/tools/auth.rs"

[dependencies]
clap = "2.31"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
