[package]
name = "payrange"
version = "0.1.0"
authors = ["Alex Nichol <unixpickle@gmail.com>"]

[lib]
name = "payrange"
path = "src/mod.rs"

[[bin]]
name = "payrange-auth"
path = "src/tools/auth.rs"

[[bin]]
name = "payrange-device"
path = "src/tools/device.rs"

[[bin]]
name = "payrange-track"
path = "src/tools/track.rs"

[[bin]]
name = "payrange-scan"
path = "src/tools/scan.rs"

[[bin]]
name = "payrange-signup"
path = "src/tools/signup.rs"

[dependencies]
clap = "2.31"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
tokio-core = "0.1"
